# alar

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  vite.config.ts
.zed/: debug.json
back/: __main__.py  auth.py  config.py  db.py  deps.py  exceptions.py  jwt.py  logger.py  main.py  pyproject.toml  schemas.py
back/apis/: __init__.py  auth.py  comment.py  post.py  user.py
back/classes/: User.py  __init__.py
back/database/: __init__.py  core.py  crud.py
back/database/models/: CommentModel.py  LikedModels.py  PostModel.py  SocialLink.py  SocialLinkModel.py  StackModel.py  UserModel.py  __init__.py
back/models/: CommentModel.py  LikeModels.py  PostModel.py  SocialLinkModel.py  StackModel.py  UserModel.py  __init__.py
back/repositories/: __init__.py  base.py  comment.py  post.py  user.py
back/repository/: __init__.py  base.py  comment.py  like.py  post.py  user.py
back/routes/: __init__.py  auth.py  comment.py  post.py  user.py
back/routes/v1/: __init__.py  auth.py  comment.py  post.py  user.py
back/services/: __init__.py  base.py  comment.py  post.py  user.py
back/tests/: test_auth.py  test_user.py
back/tests/router_tests/: conftest.py  test_auth.py  test_user.py
front/: .tolgeerc  package-lock.json  package.json  svelte.config.js  vite.config.ts
front/src/: hooks.server.ts
front/src/lib/: auth.ts  config.ts  user.ts  utils.ts
front/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  +page.ts
src/routes/: +layout.svelte
src/routes/login/: +page.svelte
src/routes/styles/: _fonts.scss  global.scss
(+23 files in other folders)
